# InvestmentAssistant

./: .env.example  .gitignore  README.md  REPO_MAP.md  pyproject.toml
config/: company_registry.json  ir_annual_reports.json  source_policy.json  watchlist.json
docs/: agent-improvement-backlog.md  alternative-data-agent-v1.md  alternative-data-capture-plan-v1.md  business-model-data-source-coverage-tracker-v1.md  business-model-moat-agent-v1.md  business-model-unit-economics-workpaper-design-v1.md  decision-question-led-evidence-workflow-v1.md  evidence-and-communication-extraction-design-v1.md  evidence-workpaper-layer-design-v1.md  financial-agents-v1.md  financial-evidence-investigation-skill-v1.md  financial-extraction-agent-instruction-v1.md  financial-metrics-agent-instruction-v1.md  financial-report-interpretation-skill-v1.md  financial-report-reading-system-design-v1.md  financial-results-report-methodology-v1.md  gemini-business-model-due-diligence-cn-notes.md  human-involved-decision-points.md  implementation-phases.md  investment-assistant-holistic-design-v1.md  management-communication-agent-design-v1.md  management-communication-evidence-source-checklist-v1.md  metrics-formula-requirements-v1.md  mvp-prototype-contract-v1.md  official-report-evidence-agent-design-v1.md  overnight-build-notes.md  pdd-external-moat-source-prototype-v1.md  pipeline-code-borrowing-review-v1.zh.md  public-voice-evidence-agent-v1.md  requirements-answers-from-drive-notes.md  research-operating-principles-v1.md  right-people-agent-v1.md  right-people-methodology-v1.zh.md  (+7 more)
(+233 files in other folders)
