[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research-system"
version = "0.1.0"
description = "CLI-first multi-agent stock research scaffold for value-investing research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "pypdf>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
stock-research = "stock_research.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
